Feat: Adicionando novo Endpoint de servico
