# swagger_output.json
@@ -161,6 +161,168 @@
         }
       }
     },
+    "/servico": {
+      "post": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Endpoint para criar um novo serviço",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "descricao": {
+                  "example": "any"
+                },
+                "data": {
+                  "example": "any"
+                },
+                "valor": {
+                  "example": "any"
+                },
+                "usuarioID": {
+                  "example": "any"
+                },
+                "tipoID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Endpoint para atualizar um serviço",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "uuid": {
+                  "example": "any"
+                },
+                "descricao": {
+                  "example": "any"
+                },
+                "data": {
+                  "example": "any"
+                },
+                "valor": {
+                  "example": "any"
+                },
+                "usuarioID": {
+                  "example": "any"
+                },
+                "tipoID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Endpoint para listar todos os serviços",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/servico/{uuid}": {
+      "delete": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Endpoint para deletar um serviço",
+        "description": "",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Serviço"
+        ],
+        "summary": "Endpoint para buscar um serviço pelo UUID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/tiposervico": {
       "post": {
         "tags": [
